--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>CPU Stress Test - 24 Threads</title>
+  <title>CPU Stress Test - 64 Threads</title>
   <style>
     #output {
       font-family: monospace;
@@ -12,42 +12,28 @@
   </style>
 </head>
 <body>
-<h2>Running 24 CPU-intensive Web Workers...</h2>
+<h2>Running 64 CPU-intensive Web Workers...</h2>
 <div id="output"></div>
 
 <script>
   const output = document.getElementById('output');
-  const workerCount = 24;
-
-  // Worker 脚本内容
-  const workerScript = `
-    function complexArrayCalculation(size) {
-      let arr = new Array(size).fill(0).map((_, i) => Math.random() * i);
-      for (let j = 0; j < 100; j++) {
-        arr = arr.map(x => Math.sin(x) * Math.sqrt(x + 1));
-      }
-      return arr.slice(0, 5); // 返回前5个值用于展示
-    }
-
-    while (true) {
-      const result = complexArrayCalculation(10000);
-      postMessage(result);
-      // 控制频率，防止输出过快卡死
-      setTimeout(() => {}, 10);
-    }
-  `;
-
-  const blob = new Blob([workerScript], { type: 'application/javascript' });
-  const url = URL.createObjectURL(blob);
+  const workerCount = 64;
+  const workerURL = 'index.js';
 
   for (let i = 0; i < workerCount; i++) {
-    const worker = new Worker(url);
+    const worker = new Worker(workerURL);
+
     worker.onmessage = function (e) {
-      const result = e.data.join(', ');
-      output.innerHTML += `<div>[Worker ${i + 1}] Output: ${result}</div>`;
+      const { result, totalDuration, averageDuration } = e.data;
+      const formattedResult = result.join(', ');
+
+      output.innerHTML += `<div>[Worker ${i + 1}] Last Result: [${formattedResult}] | Total Duration: ${totalDuration.toFixed(2)}ms | Average: ${averageDuration}ms</div>`;
+
+      window.alert(`Worker ${i + 1}: 20次总耗时 ${totalDuration.toFixed(2)}ms | 平均每次 ${averageDuration}ms`);
     };
-    worker.onerror = function (e) {
-      console.error(`Worker ${i + 1} error:`, e.message);
+
+    worker.onerror = function (err) {
+      console.error(`Worker ${i + 1} error:`, err.message);
     };
   }
 </script>
